[Hrushikesh] Added:implementation of kafka
