# src/utils/swagger.json
@@ -1,30 +1,27 @@
 {
-  "openapi": "3.0.0",
+  "openapi": "3.0.1",
   "info": {
-    "version": "1.0.0",
-    "title": "User API",
-    "description": "API documentation for user related operations"
+    "title": "Google Keep",
+    "description": "This is the replica of google keep.User can register and login, user can do request for forgot password and he can reset password using that shared credentionals. User can login and perform note CRUD."
   },
   "servers": [
     {
-      "url": "http://localhost:3000/api/v1"
+      "url": "http://localhost:3000/api/"
     }
   ],
   "tags": [
     {
-      "name": "User",
-      "description": "User operations"
-    },
-    {
-      "name": "Notes",
-      "description": "Note operations"
+      "name": "Google keep using express CLI",
+      "description": "This is the replica of google keep"
     }
   ],
   "paths": {
     "/users": {
       "post": {
-        "tags": ["User"],
-        "summary": "Register user",
+        "tags": [
+          "User"
+        ],
+        "description": "Register user...",
         "requestBody": {
           "description": "Register user",
           "content": {
@@ -33,48 +30,61 @@
                 "$ref": "#/components/schemas/User"
               }
             }
-          }
+          },
+          "required": false
         },
         "responses": {
           "201": {
-            "description": "User created successfully"
+            "description": "User created successfully",
+            "content": {}
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error",
+            "content": {}
           }
-        }
+        },
+        "x-codegen-request-body-name": "Register new name"
       }
     },
     "/users/login": {
       "post": {
-        "tags": ["User"],
-        "summary": "User login",
+        "tags": [
+          "User"
+        ],
+        "description": "User login",
         "requestBody": {
           "description": "User login",
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Login"
+                "$ref": "#/components/schemas/login"
               }
             }
-          }
+          },
+          "required": false
         },
         "responses": {
-          "200": {
-            "description": "Successfully logged in"
+          "201": {
+            "description": "sucessfully logged in",
+            "content": {}
           },
           "404": {
-            "description": "Email or password doesn't match"
+            "description": "email or password doesn't match",
+            "content": {}
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error",
+            "content": {}
           }
-        }
+        },
+        "x-codegen-request-body-name": "login user"
       }
     },
-    "/users/forgetpassword": {
+    "/users/forgotpassword": {
       "post": {
-        "tags": ["User"],
+        "tags": [
+          "User"
+        ],
         "summary": "Forget password",
         "requestBody": {
           "description": "Forget Password",
@@ -84,67 +94,71 @@
                 "$ref": "#/components/schemas/ForgetPassword"
               }
             }
-          }
+          },
+          "required": false
         },
         "responses": {
           "200": {
-            "description": "Reset password link sent successfully"
+            "description": "reset password link sent sucessfully",
+            "content": {}
           },
           "500": {
-            "description": "Could not send mail"
+            "description": "could not send mail",
+            "content": {}
           }
-        }
+        },
+        "x-codegen-request-body-name": "Forget Password"
       }
     },
     "/users/resetPassword": {
-      "put": {
-        "tags": ["User"],
-        "summary": "Reset password for User",
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "summary": "reset password for User",
         "requestBody": {
-          "description": "New password",
+          "description": "new password",
           "content": {
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/ResetPassword"
               }
             }
-          }
+          },
+          "required": true
         },
         "responses": {
           "200": {
-            "description": "Reset Password is successfully done"
+            "description": "reset Password is sucessfully done",
+            "content": {}
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error",
+            "content": {}
           }
         },
         "security": [
           {
             "JWT": []
           }
-        ]
+        ],
+        "x-codegen-request-body-name": "new password"
       }
     },
     "/notes": {
-      "post": {
-        "tags": ["Notes"],
-        "summary": "Create a note for User",
-        "requestBody": {
-          "description": "Create note",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Note"
-              }
-            }
-          }
-        },
+      "get": {
+        "tags": [
+          "Notes"
+        ],
+        "summary": "Get all Notes",
         "responses": {
-          "201": {
-            "description": "Note created successfully"
+          "200": {
+            "description": "notes fetched successfully",
+            "content": {}
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error",
+            "content": {}
           }
         },
         "security": [
@@ -153,15 +167,64 @@
           }
         ]
       },
-      "get": {
-        "tags": ["Notes"],
-        "summary": "Get all Notes",
+      "post": {
+        "tags": [
+          "Notes"
+        ],
+        "summary": "Create a note for User",
+        "requestBody": {
+          "description": "create note",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Note"
+              }
+            }
+          },
+          "required": false
+        },
         "responses": {
-          "200": {
-            "description": "Notes fetched successfully"
+          "201": {
+            "description": "note created succesfully",
+            "content": {}
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error",
+            "content": {}
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "x-codegen-request-body-name": "create note"
+      }
+    },
+    "/notes/{_id}": {
+      "get": {
+        "tags": [
+          "Notes"
+        ],
+        "summary": "Get a single note by it's id",
+        "parameters": [
+          {
+            "name": "_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "note fetched successfully",
+            "content": {}
+          },
+          "500": {
+            "description": "Internal server error",
+            "content": {}
           }
         },
         "security": [
@@ -169,11 +232,11 @@
             "JWT": []
           }
         ]
-      }
-    },
-    "/notes/{_id}": {
+      },
       "put": {
-        "tags": ["Notes"],
+        "tags": [
+          "Notes"
+        ],
         "summary": "Update a note for User",
         "parameters": [
           {
@@ -186,31 +249,37 @@
           }
         ],
         "requestBody": {
-          "description": "Update note",
+          "description": "update note",
           "content": {
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/Note"
               }
             }
-          }
+          },
+          "required": false
         },
         "responses": {
           "202": {
-            "description": "Note updated successfully"
+            "description": "note updated succesfully",
+            "content": {}
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error",
+            "content": {}
           }
         },
         "security": [
           {
             "JWT": []
           }
-        ]
+        ],
+        "x-codegen-request-body-name": "update note"
       },
       "delete": {
-        "tags": ["Notes"],
+        "tags": [
+          "Notes"
+        ],
         "summary": "Delete a note",
         "parameters": [
           {
@@ -224,10 +293,12 @@
         ],
         "responses": {
           "202": {
-            "description": "Note deleted successfully"
+            "description": "Note deleted succesfully",
+            "content": {}
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error",
+            "content": {}
           }
         },
         "security": [
@@ -237,10 +308,12 @@
         ]
       }
     },
-    "/notes/archive/{_id}": {
-      "put": {
-        "tags": ["Notes"],
-        "summary": "Archive a note for User",
+    "/notes/isArchived/{_id}": {
+      "post": {
+        "tags": [
+          "Notes"
+        ],
+        "summary": "Archieve a note for User",
         "parameters": [
           {
             "name": "_id",
@@ -253,10 +326,12 @@
         ],
         "responses": {
           "202": {
-            "description": "Note archived successfully"
+            "description": "note archieved succesfully",
+            "content": {}
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error",
+            "content": {}
           }
         },
         "security": [
@@ -266,9 +341,11 @@
         ]
       }
     },
-    "/notes/trash/{_id}": {
-      "put": {
-        "tags": ["Notes"],
+    "/notes/isTrashed/{_id}": {
+      "post": {
+        "tags": [
+          "Notes"
+        ],
         "summary": "Send a note to trash",
         "parameters": [
           {
@@ -282,10 +359,12 @@
         ],
         "responses": {
           "202": {
-            "description": "Note sent to trash successfully"
+            "description": "note sent to trash succesfully",
+            "content": {}
           },
           "500": {
-            "description": "Internal server error"
+            "description": "Internal server error",
+            "content": {}
           }
         },
         "security": [
@@ -297,13 +376,6 @@
     }
   },
   "components": {
-    "securitySchemes": {
-      "JWT": {
-        "type": "apiKey",
-        "name": "Authorization",
-        "in": "header"
-      }
-    },
     "schemas": {
       "User": {
         "type": "object",
@@ -322,7 +394,7 @@
           }
         }
       },
-      "Login": {
+      "login": {
         "type": "object",
         "properties": {
           "email": {
@@ -358,10 +430,17 @@
           "description": {
             "type": "string"
           },
-          "colour": {
+          "color": {
             "type": "string"
           }
         }
+      }
+    },
+    "securitySchemes": {
+      "JWT": {
+        "type": "apiKey",
+        "name": "Authorization",
+        "in": "header"
       }
     }
   }
